bk_ida/gccida/g1/maybe_fix_stack_asms
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_fix_stack_asms/src/reload1.c:1779:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class i; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_fix_stack_asms/src/reload1.c:1790:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode operand_mode[30]; // [rsp+10h] [rbp-1A8h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_fix_stack_asms/src/reload1.c:1805:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v20 = (  struct rtx_def *)v0->insn[2]; 
                          ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_fix_stack_asms/src/reload1.c:1836:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
decode_asm_operands( v20, recog_data_0.operand, recog_data_0.operand_loc, constraints, operand_mode); 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_fix_stack_asms/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_fix_stack_asms/src/reload1.c:1836:49: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
decode_asm_operands( v20, recog_data_0.operand, recog_data_0.operand_loc, constraints, operand_mode); 
                                                ^~~~~~~~~~~~
                                                recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_fix_stack_asms/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_fix_stack_asms/src/obj/reload1.o] Error 1
